# RTDInCity

./: .gitignore  README.md  index.html  package.json  progress.md  tsconfig.json  vite.config.ts
.claude/: launch.json
docs/: GDD.md  mob-ideas.md  story-ideas.md  unit-ideas.md
docs/characters/: 1-common.md  2-uncommon.md  3-special.md  4-rare.md  5-legendary.md  6-transcendent.md  README.md  common-sprite-prompt.md
public/assets/backgrounds/: README.md
scripts/: balance-sim.ts  build-common-runtime-sprites.ps1  build-generated-sprite.py  normalize-sprites.py  skills-check.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: path.ts  save.ts  sfx.ts
src/data/: achievements.ts  art.ts  cards.ts  combos.ts  config.ts  events.ts  recipes.ts  skills.ts  stocks.ts  story.ts  units.ts  waves.ts
src/entities/: Mob.ts  Unit.ts
src/scenes/: BootScene.ts  GameScene.ts  TitleScene.ts
src/systems/: WaveSystem.ts
src/ui/: deckselect.ts  dex.ts  hud.ts  settings.ts
