[package]
name = "random-defence-in-city"
version = "0.1.0"
description = "랜덤 조합 디펜스 in City"
authors = ["kbk"]
edition = "2021"

[lib]
name = "random_defence_in_city_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
